# godot-universal-spritepacker

./: .gitignore  README.md  godot_universal_spritepacker.py  pyproject.toml  requirements.txt  run_linter.bat  run_packer.bat  run_packer_tiny_spritesheets.bat  setup.cfg  smart_split.bat  smart_split.py
godot_universal_spritepacker/: cli.py
sample/: run_packer.bat  run_packer_tiny_spritesheets.bat
sample/output/: pixi_demo.html  spritesheet.json
src/: godot_universal_spritepacker.py
src/godot_universal_spritepacker/: godot_universal_spritepacker.py  mypy.ini
test_sprites/thing_a/: multi_animation_sprite.csv
