[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-universal-spritepacker"
version = "1.0.3"
description = "Simple sprite packer for Godot and other engines. Split, pack, and convert images/SVGs to spritesheets and Godot resources."
authors = [
    { name = "Donitz" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow",
    "rectpack"
]

[project.urls]
Homepage = "https://github.com/Donitzo/godot-universal-spritepacker"

[tool.setuptools.packages.find]
include = ["src"]

[project.scripts]
godot_universal_spritepacker = "src.godot_universal_spritepacker:main"
